* Thu May 1 2003 Philip
- allow closing of webcam connections
- more reliable finding of webcam connections

* Thu May 1 2003 Philip
- send who's images along with webcam image

* Thu May 1 2003 Philip
- get idle time from server
- changes to webcam support to not require the user to worry about keys and 
servers

* Sun Apr 20 2003 Philip
- fixes for multiple connects and bugs introduced when adding async connects

* Sat Apr 19 2003 Philip
- Add asynchronous connects
- Each `id' represents a single login session and everything to do with it
- add_handler and yahoo_(read|write)_ready take a void * data argument
- possibly introduce many bugs :D

* Thu Apr 10 2003 Wayne
- Added callback for the list of chatrooms

* Thu Mar 29 2003 Wayne
- Added basic support for pulling down the list of chatrooms

* Mon Mar 24 2003 Mik
- Seperate webcam struct to public and private data
- Rename webcam struct to yahoo_webcam

* Fri Mar 21 2003 Philip
- Don't dereference yd after it has been freed

* Fri Mar 21 2003 Mik
- Clean up webcam data when yahoo data is cleaned up
- Added connection type to webcam
- Removed static for callbacks in sample_client

* Wed Mar 19 2003 Mik
- Added perliminary webcam upload support
- Added descriptions for the webcam functions

* Tue Mar 18 2003 Wayne Parrott
- Added preliminary yahoo chat support

* Sun Mar 16 2003 Philip
- Fixed double deletion problem with yab
- Fixed memory leak with non-pager connections

* Fri Mar 14 2003 Philip
- Announce login success earlier

* Thu Mar 13 2003 Mik
- Add preliminary webcam support

* Thu Mar 6 2003 Philip
- Remove requests for unnecessary data in addressbook code

* Tue Mar 4 2003 Philip
- Fix read past end of string in yahoo_getyab

* Wed Feb 19 2003 Philip (version 0.6.3)
- Make dist depend on libyahoo2.spec and libyahoo2.pc
- Change version number to 0.6.3

* Thu Feb 13 2003 Philip
- added check for null connection when reading from socket.
thanks to Alan Humpherys

* Thu Feb 6 2003 Philip